package com.crm.Tiefling.DTO;

import lombok.Data;

@Data
public class AuthorityDTO {
    private final Long id;
    private final String authority;
}
