package com.crm.Tiefling.service;

public class RoomService {
}
